Fix: overflow y -> auto, not scroll.

--- a/jekyll/_sass/_sidebar.scss
+++ b/jekyll/_sass/_sidebar.scss
@@ -187,7 +187,7 @@ $sidebar-spacing-base: 5px;
   background: #ffffff;
   height: 90vh;
   width: $rightbar-width;
-  overflow: scroll;
+  overflow-y: auto;
   top: 64px;
   font-size: 16px;
   transition: all 0.5s ease-in-out;
